--- a/client/src/scss/_media-bottom.scss
+++ b/client/src/scss/_media-bottom.scss
@@ -29,7 +29,7 @@
 .media-bottom-iframe {
 	max-width: 85%;
 	margin: 0 auto;
-	margin-top: 2rem;
+	margin-top: 0.65rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
