--- a/client/src/scss/_media-buttons.scss
+++ b/client/src/scss/_media-buttons.scss
@@ -73,6 +73,9 @@
 		margin-bottom: 0;
 		align-items: center;
 	}
+	.profile-buttons {
+		margin-bottom: 2rem;
+	}
 	.favorites-btn,
 	.watchlist-btn,
 	.watched-btn {
