--- a/client/src/scss/_media-top.scss
+++ b/client/src/scss/_media-top.scss
@@ -47,6 +47,9 @@
 	left: 5%;
 	padding: 1rem;
 }
+.media-top-poster-img {
+	border-radius: 8px;
+}
 @keyframes fadeIn {
 	0% {
 		opacity: 0;
